--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 20px;
+    padding: 20px 30px;
     
     color:white;
 }
